--- a/index.html
+++ b/index.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Adan Soluções</title>
-    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/style/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="/login-page-adan-solucoes/assets/style/style.css">
 </head>
+<body>
 
-<body class="d-flex aling-itens-center">
-    <main class="w-100 m-auto form-container">
-            <img src="./assets/img/android-chrome-192x192.png" alt="logo Adan Soluções" height="100" width="100">
-            <h1>Adan Soluções</h1>
-            <h2>Login</h2>
-            <form>
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Email</label>
-                </div>
-                <div class="form-floating">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Senha</label>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
-                        <label class="form-check-label" for="flexSwitchCheckChecked">Relembre-me</label>
-                    </div>
-                    <a href="">Esqueceu sua senha?</a>
-                </div>
-                <button type="submit" class="btn btn-primary container">Entrar</button>
-            </form>
-    </main>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+<div class="container">
+  <div class="row justify-content-center login-container">
+    <div class="col-md-5">
+      <div class="card py-3">
+        <div class="card-body">
+          <img src="./assets/img/android-chrome-192x192.png" alt="Logo Adan Soluções" class="img-fluid mx-auto d-block" width="100" height="100">
+          <h1 class="card-title text-center">Adan Soluções</h1>
+          <h2 class="container mb-4">Login</h2>
+          <form>
+            <div class="form-floating mb-4">
+              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Email address</label>
+            </div>
+            <div class="form-floating mb-4">
+              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <label for="floatingPassword">Password</label>
+            </div>
+            <div class="form-group d-flex justify-content-between">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="lembrar">
+                <label class="form-check-label" for="lembrar">Lembrar-me</label>
+              </div>
+              <a href="#" class="float">Esqueceu sua senha?</a>
+            </div>
+            
+            <button type="submit" class="btn btn-primary btn-block mt-3 container">Entrar</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
-
 </html>
