--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/login-page-adan-solucoes/assets/style/style.css">
+  <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
 
 <div class="container">
-  <div class="row justify-content-center login-container">
-    <div class="col-md-5">
+  <div class="justify-content-center login-container d-flex">
+    <div class="card col-5">
+      <div class="card-body mt-5">
+        <img src="./assets/img/android-chrome-192x192.png" alt="Logo Adan Soluções" class="img-fluid mx-auto d-block" width="100" height="100">
+        <h1 class="card-title text-center">Adan Soluções</h1>
+        <p></p>
+      </div>
+      
+    </div>
+
+    <div class="col">
       <div class="card py-3">
         <div class="card-body">
-          <img src="./assets/img/android-chrome-192x192.png" alt="Logo Adan Soluções" class="img-fluid mx-auto d-block" width="100" height="100">
-          <h1 class="card-title text-center">Adan Soluções</h1>
           <h2 class="container mb-4">Login</h2>
           <form>
             <div class="form-floating mb-4">
