--- a/index.html
+++ b/index.html
@@ -5,33 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
 
 <div class="container">
   <div class="justify-content-center login-container d-flex">
-    <div class="card col-5">
-      <div class="card-body mt-5">
+    <div class="rounded-start-4 col-4 bg-adan">
+      <div class="center">
         <img src="./assets/img/android-chrome-192x192.png" alt="Logo Adan Soluções" class="img-fluid mx-auto d-block" width="100" height="100">
-        <h1 class="card-title text-center">Adan Soluções</h1>
-        <p></p>
+        <h1 class="card-title text-center mt-4">Adan Soluções</h1>
+        <p class="text-center m-4">Explore nossos produtos/serviços e conte conosco para atender suas necessidades. Seja bem-vindo(a)!</p>
       </div>
       
     </div>
 
-    <div class="col">
-      <div class="card py-3">
-        <div class="card-body">
-          <h2 class="container mb-4">Login</h2>
+    <div class="bg-form rounded-end-4 col-5">
+      <div class="p-5">
+        <div>
+          <h2 class="container mb-5">Login</h2>
           <form>
-            <div class="form-floating mb-4">
-              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-              <label for="floatingInput">Email address</label>
+            <div class="form-floating mb-5">
+              <input type="email" class="form-control input" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Email</label>
             </div>
-            <div class="form-floating mb-4">
-              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-              <label for="floatingPassword">Password</label>
+            <div class="form-floating mb-5">
+              <input type="password" class="form-control input" id="floatingPassword" placeholder="Password">
+              <label for="floatingPassword">Senha</label>
             </div>
             <div class="form-group d-flex justify-content-between">
               <div class="form-check">
@@ -41,7 +42,7 @@
               <a href="#" class="float">Esqueceu sua senha?</a>
             </div>
             
-            <button type="submit" class="btn btn-primary btn-block mt-3 container">Entrar</button>
+            <button type="submit" class="btn btn-primary btn-block mt-3 container rounded-4 btn-login">Entrar</button>
           </form>
         </div>
       </div>
