--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="container">
   <div class="justify-content-center login-container d-flex">
-    <div class="rounded-start-4 col-4 bg-adan">
+    <div class="rounded-start-4 col-lg-4 col-md-6 bg-adan">
       <div class="center">
         <img src="./assets/img/android-chrome-192x192.png" alt="Logo Adan Soluções" class="img-fluid mx-auto d-block" width="100" height="100">
         <h1 class="card-title text-center mt-4">Adan Soluções</h1>
@@ -22,28 +22,28 @@
       
     </div>
 
-    <div class="bg-form rounded-end-4 col-5">
-      <div class="p-5">
+    <div class="bg-form rounded-end-4 col-lg-5 col-md">
+      <div class="px-md-4 pt-lg-2 px-lg-5">
         <div>
-          <h2 class="container mb-5">Login</h2>
+          <h2 class="container mb-md-4 mt-md-5 my-lg-4 ">Login</h2>
           <form>
-            <div class="form-floating mb-5">
+            <div class="form-floating mb-lg-5 mb-md-4">
               <input type="email" class="form-control input" id="floatingInput" placeholder="name@example.com">
               <label for="floatingInput">Email</label>
             </div>
-            <div class="form-floating mb-5">
+            <div class="form-floating mb-lg-5 mb-md-4">
               <input type="password" class="form-control input" id="floatingPassword" placeholder="Password">
               <label for="floatingPassword">Senha</label>
             </div>
-            <div class="form-group d-flex justify-content-between">
+            <div class="form-group d-flex justify-content-between flex-md-column flex-lg-row ">
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="lembrar">
+                <input type="checkbox" class="form-check-input mb-md-3" id="lembrar">
                 <label class="form-check-label" for="lembrar">Lembrar-me</label>
               </div>
               <a href="#" class="float">Esqueceu sua senha?</a>
             </div>
             
-            <button type="submit" class="btn btn-primary btn-block mt-3 container rounded-4 btn-login">Entrar</button>
+            <button type="submit" class="btn btn-primary btn-block mt-lg-3 mt-md-4 mb-md-5 container rounded-4 btn-login">Entrar</button>
           </form>
         </div>
       </div>
