--- a/index.html
+++ b/index.html
@@ -7,37 +7,39 @@
   <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
 
 <div class="container">
   <div class="justify-content-center login-container d-flex">
-    <div class="rounded-start-4 col-lg-4 col-md-6 bg-adan">
+    <div class="rounded-start-4 col-lg-4 col-md-6 bg-adan d-none d-md-block">
       <div class="center">
         <img src="./assets/img/android-chrome-192x192.png" alt="Logo Adan Soluções" class="img-fluid mx-auto d-block" width="100" height="100">
         <h1 class="card-title text-center mt-4">Adan Soluções</h1>
         <p class="text-center m-4">Explore nossos produtos/serviços e conte conosco para atender suas necessidades. Seja bem-vindo(a)!</p>
       </div>
-      
     </div>
 
-    <div class="bg-form rounded-end-4 col-lg-5 col-md">
-      <div class="px-md-4 pt-lg-2 px-lg-5">
+    <div class="bg-form rounded-end-4 col col-lg-5 col-md media">
+      <div class="px-md-4 pt-lg-2 px-lg-5 py-4 px-3">
         <div>
-          <h2 class="container mb-md-4 mt-md-5 my-lg-4 ">Login</h2>
+          <img src="./assets/img/android-chrome-192x192.png" alt="Logo Adan Soluções" class="img-fluid mx-auto d-block d-md-none" width="100" height="100">
+          <h1 class="card-title text-center mt-2 pb-3 d-md-none">Adan Soluções</h1>
+          <h2 class="container mb-md-4 mt-md-5 my-lg-4 pb-3">Login</h2>
           <form>
-            <div class="form-floating mb-lg-5 mb-md-4">
-              <input type="email" class="form-control input" id="floatingInput" placeholder="name@example.com">
+            <div class="form-floating mb-md-4 mb-3">
+              <input type="email" class="form-control rounded-4" id="floatingInput" placeholder="name@example.com">
               <label for="floatingInput">Email</label>
             </div>
-            <div class="form-floating mb-lg-5 mb-md-4">
-              <input type="password" class="form-control input" id="floatingPassword" placeholder="Password">
+            <div class="form-floating mb-md-4 mb-4">
+              <input type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
               <label for="floatingPassword">Senha</label>
             </div>
             <div class="form-group d-flex justify-content-between flex-md-column flex-lg-row ">
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input mb-md-3" id="lembrar">
+              <div class="form-check mb-md-3 mb-4">
+                <input type="checkbox" class="form-check-input" id="lembrar">
                 <label class="form-check-label" for="lembrar">Lembrar-me</label>
               </div>
               <a href="#" class="float">Esqueceu sua senha?</a>
