--- a/index.html
+++ b/index.html
@@ -29,15 +29,20 @@
           <h1 class="card-title text-center mt-2 pb-3 d-md-none">Adan Soluções</h1>
           <h2 class="container mb-md-4 mt-md-5 my-lg-4 pb-3">Login</h2>
           <form>
-            <div class="form-floating mb-md-4 mb-3">
-              <input type="email" class="form-control rounded-4" id="floatingInput" placeholder="name@example.com">
-              <label for="floatingInput">Email</label>
+            
+            <div class="form-floating mb-md-4 mb-3 input">
+              <input type="email" class="form-control rounded-4" id="email" placeholder="name@example.com">
+              <label for="email">Email</label>
+              <i class="bi bi-check-circle-fill"></i>
+              <i class="bi bi-exclamation-circle-fill"></i>
             </div>
-            <div class="form-floating mb-md-4 mb-4">
-              <input type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
-              <label for="floatingPassword">Senha</label>
+            <div class="form-floating mb-md-4 mb-4 input">
+              <input type="password" class="form-control rounded-4" id="password" placeholder="Password">
+              <label for="password">Senha</label>
+              <i class="bi bi-check-circle-fill"></i>
+              <i class="bi bi-exclamation-circle-fill"></i>
             </div>
-            <div class="form-group d-flex justify-content-between flex-md-column flex-lg-row ">
+            <div class="form-group d-flex justify-content-between flex-md-column flex-lg-row">
               <div class="form-check mb-md-3 mb-4">
                 <input type="checkbox" class="form-check-input" id="lembrar">
                 <label class="form-check-label" for="lembrar">Lembrar-me</label>
@@ -53,6 +58,6 @@
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+<script src="./script.js"></script>
 </body>
 </html>
