--- a/index.html
+++ b/index.html
@@ -33,16 +33,19 @@
             <div class="form-floating mb-md-4 mb-3 input">
               <input type="email" class="form-control rounded-4" id="email" placeholder="name@example.com">
               <label for="email">Email</label>
-              <i class="bi bi-check-circle-fill"></i>
-              <i class="bi bi-exclamation-circle-fill"></i>
+              <i class="bi bi-check-circle-fill icone"></i>
+              <i class="bi bi-exclamation-circle-fill icone"></i>
+              <span class="position-absolute mt-1 ms-2 fs-6 text-danger d-none">Digite seu E-mail</span>
             </div>
+            
             <div class="form-floating mb-md-4 mb-4 input">
               <input type="password" class="form-control rounded-4" id="password" placeholder="Password">
               <label for="password">Senha</label>
-              <i class="bi bi-check-circle-fill"></i>
-              <i class="bi bi-exclamation-circle-fill"></i>
+              <i class="bi bi-check-circle-fill icone"></i>
+              <i class="bi bi-exclamation-circle-fill icone"></i>
+              <span class="position-absolute mt-1 ms-2 fs-6 text-danger d-none">Digite sua senha</span>
             </div>
-            <div class="form-group d-flex justify-content-between flex-md-column flex-lg-row">
+            <div class="form-group d-flex justify-content-between flex-md-column flex-lg-row pt-2">
               <div class="form-check mb-md-3 mb-4">
                 <input type="checkbox" class="form-check-input" id="lembrar">
                 <label class="form-check-label" for="lembrar">Lembrar-me</label>
